got drop down to show choices and altered text input fields

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,10 @@ body {
     -o-background-size: cover;
   }
 
+ #input {
+    margin-left: 350px ;
+ }
+
 
   .map-container-5{
     overflow:hidden;
