--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,42 @@
-@viewport {
-  min-width: 640px;
-  max-width: 800px;
+/* Set a background image by replacing the URL below */
+body {
+  background: url('https://format-com-cld-res.cloudinary.com/image/private/s--JhgW_Bvj--/c_limit,g_center,h_550,w_65535/a_auto,fl_keep_iptc.progressive,q_95/v1/594f8cc17459e148d2ac05a4cabef789/_TSB2145.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 
-@viewport {
-  zoom: 0.75;
-  min-zoom: 0.5;
-  max-zoom: 0.9;
+#input {
+  margin-left: 400px ;
 }
 
-@viewport {
-  orientation: landscape;
-}
+
+.map-container-5{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  }
+  .map-container-5 iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+  }
+  /* base viewport option for mobile can */
+  @viewport {
+    min-width: 640px;
+    max-width: 800px;
+  }
+  
+  @viewport {
+    zoom: 0.75;
+    min-zoom: 0.5;
+    max-zoom: 0.9;
+  }
+  
+  @viewport {
+    orientation: landscape;
+  }
