--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ body {
   -o-background-size: cover;
 }
 
-#input {
+#input{
   margin-left: 400px ;
 }
 
@@ -25,18 +25,41 @@ body {
   width:100%;
   position:absolute;
   }
-  /* base viewport option for mobile can */
-  @viewport {
-    min-width: 640px;
-    max-width: 800px;
+
+  /* modal basic look to show up gray on the background */
+  .modal{
+    /* first three position the background dimming to the top of page */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    /* this is the modal box location from the top*/
+    padding-top: 250px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    /* overflow will keep our modal to keep its same height/width and let the user scroll if the information is too much for the page */
+    overflow: auto;
+    /* this is what changes the background to be darker so the modal appears more prominently */
+    background-color: rgb(0,0,0);
+    background-color: rgb(0,0,0,0.4);
   }
-  
-  @viewport {
-    zoom: 0.75;
-    min-zoom: 0.5;
-    max-zoom: 0.9;
+  /* the modal box inner look */
+  .modal-content{
+    background-color: aliceblue;
+    margin: auto;
+    padding: 20px;
+    border: 1px;
+    width: 80%;
   }
-  
-  @viewport {
-    orientation: landscape;
+  /* internal modal close button */
+  .modal-button{
+    color: dodgerblue;
+    float: right;
+    font-size: 30px;
+    font-weight: bolder;
+  }
+  .modal-button:hover,
+  .modal-button:focus{
+    color: greenyellow;
   }
