--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,4 +25,9 @@ body {
     width:100%;
     position:absolute;
     }
-    
+
+    #summary {
+      font-size: 14pt;
+      color: white;
+
+    }
