--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,16 @@ body {
 
 }
 
+#input{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+#zip{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
 
 
